added modules of core and share

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,9 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
+  },
+  "paths":{
+    "@core/*":["src/app/core/*"],
+    "@shere/*":["src/app/share/*"]
   }
 }
