--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
@@ -19,7 +19,11 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths":{
+      "@core/*":["src/app/core/*"],
+      "@share/*":["src/app/share/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -27,8 +31,5 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   },
-  "paths":{
-    "@core/*":["src/app/core/*"],
-    "@shere/*":["src/app/share/*"]
-  }
+  
 }
