--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/normalize.css/normalize.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/normalize.css/normalize.css"
             ],
             "scripts": []
           },
